--- a/templates/set_alarm.html
+++ b/templates/set_alarm.html
@@ -12,9 +12,12 @@
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
-<body>
-
-<!--JavaScript at end of body for optimized loading-->
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<body class="indigo darken-4">
+<div class="container">
+    <div style="text-align: center">
+        <h3 class="white-text">Set an Alarm</h3>
+        <h5 class="white-text">When would you like to wake up?</h5>
+    </div>
+</div>
 </body>
 </html>
