--- a/templates/index.html
+++ b/templates/index.html
@@ -25,14 +25,15 @@
         <h6 class="white-text">Your current alarms:</h6>
         <ul class="collection">
             {% for time in alarms.time %}
-            <a href="/delete?time&num={{ alarms.number[loop.index0] }}" class="collection-item">{{ time }}; {{ alarms.number[loop.index0] }} jumping jacks</a>
+            <a href="/delete?time&num={{ alarms.number[loop.index0] }}" class="collection-item">{{ time }}; {{
+                alarms.number[loop.index0] }} jumping jacks</a>
             {% endfor %}
         </ul>
+        <br>
+        <a href="/set">Set a new alarm</a>
         {% else %}
         <h6 class="white-text">You do not have any alarms set! Why not <a href="/set">set one?</a></h6>
         {% endif %}
-        <br>
-        <a href="/set">Set a new alarm</a>
     </div>
 </div>
 </body>
